--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,14 @@
   --team-icon-color: #afb1b8;
   --card-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  --card-shadow-portfolio: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   --bgc-icon-footer: rgba(255, 255, 255, 0.1);
   --gradient-hero: rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4);
+  --color-mail-phone: rgba(255, 255, 255, 0.6);
+  --portfolio-item-gap: 30px;
+  --shadow-button: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 
   --emblem-font: "Raleway", sans-serif;
   --title-font: "Roboto", sans-serif;
@@ -130,6 +136,7 @@ img {
 }
 
 .btn {
+  border-radius: 4px;
   font-family: var(--title-font);
   font-weight: bold;
   font-size: 16px;
@@ -287,6 +294,12 @@ img {
 }
 .portfolio-item {
   flex-basis: calc((100% - 3 * 30px) / 3);
+  margin-left: var(--portfolio-item-gap);
+  margin-top: var(--portfolio-item-gap);
+  background-color: var(--alt-text-cl);
+}
+.portfolio-item:hover {
+  box-shadow: var(--card-shadow-portfolio);
 }
 .portfolio-btn {
   display: flex;
@@ -296,6 +309,10 @@ img {
 }
 .portfolio-menu-item:not(:last-child) {
   margin-right: 8px;
+}
+.portfolio-menu-item:hover,
+.portfolio-menu-item:focus {
+  box-shadow: var(--shadow-button);
 }
 .portfolio-description {
   padding: 20px 24px;
@@ -319,6 +336,9 @@ img {
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
+}
+.icon-item-footer:not(last-child) {
+  margin-right: 10px;
 }
 .icon-item > .link-team-social {
   background-color: var(--bgc-icon-footer);
@@ -371,6 +391,10 @@ img {
   white-space: nowrap;
   flex-basis: content;
 }
+.clients-link:hover,
+.clients-link:focus {
+  border-color: var(--accent-cl);
+}
 .clients-logo {
   fill: currentColor;
   width: 106px;
@@ -397,4 +421,14 @@ img {
 }
 .bgcolor {
   background-color: var(--bgc-icon-footer);
+}
+.footer-mail,
+.footer-phone {
+  font-family: inherit;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--color-mail-phone);
 }
